# Examples

./: CMakeLists.txt  Examples.kdev4  TutoAlle.kdev4  main.cpp
.kdev4/: Examples.kdev4  TutoAlle.kdev4
engine/: CMakeLists.txt
engine/include/: IApp.hpp  Rectangle.h  engine.hpp
engine/include/base/: Actor.hpp  ActorManager.hpp  Game.hpp  IApp.hpp
engine/include/collision/: CollisionManager.h  ICollidable.h
engine/include/utils/: Vec2.h
engine/src/: Rectangle.cpp
engine/src/base/: Actor.cpp  ActorManager.cpp  Game.cpp
engine/src/collision/: CollisionManager.cpp
engine/src/utils/: Rectangle.cpp  Vec2.cpp
lib_x86_64/lib/: liballegro_acodec.so.5.2.11  liballegro_audio.so.5.2.11  liballegro_color.so.5.2.11  liballegro_dialog.so.5.2.11  liballegro_font.so.5.2.11  liballegro_image.so.5.2.11  liballegro_main.so.5.2.11  liballegro_memfile.so.5.2.11  liballegro_primitives.so.5.2.11  liballegro_ttf.so.5.2.11  liballegro_video.so.5.2.11
lib_x86_64/lib/cmake/allegro/: AllegroConfig.cmake  AllegroTargets-relwithdebinfo.cmake  AllegroTargets.cmake
lib_x86_64/lib/pkgconfig/: allegro-static-5.pc  allegro_acodec-static-5.pc  allegro_audio-static-5.pc  allegro_color-static-5.pc  allegro_dialog-static-5.pc  allegro_font-static-5.pc  allegro_image-static-5.pc  allegro_main-static-5.pc  allegro_memfile-static-5.pc  allegro_primitives-static-5.pc  allegro_ttf-static-5.pc  allegro_video-static-5.pc
source/: aLogo.cpp
source/include/: aLogo.hpp
win_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
