CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(Alleg_Tuto)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_REQUIRED ON)
#Directirio de Allegro
SET(ALLEG_LIB_DIR ${CMAKE_SOURCE_DIR}/lib_x86_64/lib)
#Librerias para el proyecto
SET(ALLEGRO_LIBRARY ${ALLEG_LIB_DIR}/liballegro.so )
SET(ALLEGRO_FONT_LIBRARY ${ALLEG_LIB_DIR}/liballegro_font.so)
    



INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib_x86_64/include)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME} 
    ${ALLEGRO_LIBRARY} ${ALLEGRO_FONT_LIBRARY}
    )


